# piterpy-imya-mne-skorost

./: README.md  nginx.conf  test-get.js  test-post.js  test.js
aiohttp/: Dockerfile  app.py  docker-compose.yml  pyproject.toml
fastapi/: Dockerfile  app.py  docker-compose.yml  pyproject.toml
fastapi-granian/: Dockerfile  pyproject.toml
litestar/: Dockerfile  app.py  docker-compose.yml  pyproject.toml
litestar-msgspec/: app.py  docker-compose.yml  pyproject.toml
robyn/: Dockerfile  app.py  docker-compose.yml  pyproject.toml
socketify/: Dockerfile  app.py  docker-compose.yml  pyproject.toml  run-on-host.sh
ucall/: Dockerfile  app.py  docker-compose.yml  pyproject.toml
