[tool.poetry]
name = "aiohttp-imya-mne-skorost"
version = "1.0.0"
description = ""
authors = ["Denis Anikin <ad@xfenix.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "*"
gunicorn = "*"
redis = "*"
aiohttp = "3.9.0b1"  # https://github.com/aio-libs/aiohttp/issues/7739

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
