[tool.poetry]
name = "socketify-imya-mne-skorost"
version = "1.0.0"
description = ""
authors = ["Denis Anikin <ad@xfenix.ru>"]
readme = "README.md"
packages = [{include = "socketify_imya_mne_skorost"}]

[tool.poetry.dependencies]
python = "^3.12"
socketify = "*"
msgspec = "^0.18.4"
redis = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
