[tool.poetry]
name = "ucall-imya-mne-skorost"
version = "1.0.0"
description = ""
authors = ["Denis Anikin <ad@xfenix.ru>"]
readme = "README.md"
packages = [{include = "ucall_imya_mne_skorost"}]

[tool.poetry.dependencies]
python = "^3.11"
ucall = "*"
pydantic = "^2.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
